--- a/Marketplace/view/frontend/email/email_order.html
+++ b/Marketplace/view/frontend/email/email_order.html
@@ -6,7 +6,7 @@
 <table>
     <tr class="email-info">
          <td>
-            <h1>{{trans "You have recieved an order"}}</h1>
+            <h1>{{var message}}</h1>
         </td>
     </tr>
 </table>
